--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.FocusMinder"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".CreateCard"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateCard"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreen"
             android:exported="false" />
         <activity
             android:name=".myDatabase"
@@ -41,9 +50,6 @@
             android:exported="false" />
         <activity
             android:name=".OnboardScreen1"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="false" />
 
         <meta-data
