--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,6 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".CreateCard"
-            android:exported="false" />
-        <activity
-            android:name=".UpdateCard"
-            android:exported="false" />
-        <activity
-            android:name=".SplashScreen"
-            android:exported="false" />
-        <activity
-            android:name=".myDatabase"
-            android:exported="false" />
-        <activity
             android:name=".Login"
             android:exported="false" />
         <activity
@@ -41,6 +29,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
         </activity>
         <activity
             android:name=".OnboardScreen3"
